--- a/test/SlnMerge.Tests/SlnMerge.Tests.csproj
+++ b/test/SlnMerge.Tests/SlnMerge.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\src\SlnMerge.cs" Link="SlnMerge.cs" />
+    <Compile Include="..\..\src\Editor\SlnMerge.cs" Link="SlnMerge.cs" />
   </ItemGroup>
 
   <ItemGroup>
