--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "jp.co.cysharp.slnmerge",
+    "name": "com.cysharp.slnmerge",
     "displayName": "SlnMerge",
     "author": { "name": "Cysharp, Inc.", "url": "https://cysharp.co.jp/en/" },
     "version": "1.1.0",
