--- a/test/SlnMerge.Tests/SlnMerge.Tests.csproj
+++ b/test/SlnMerge.Tests/SlnMerge.Tests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
   </ItemGroup>
 
 </Project>
