--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -1,4 +1,4 @@
-name: Build-Test
+name: Build-Debug
 
 on:
   push:
@@ -12,10 +12,13 @@ on:
       - synchronize
 
 jobs:
-  BuildAndRunTests:
+  build-dotnet:
     if: "!(contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[ci skip]'))"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.201
       - run: dotnet build -c Debug test/SlnMerge.Tests
       - run: dotnet test -c Debug --no-build test/SlnMerge.Tests
