--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.201
+          dotnet-version: 3.1.x
       - run: dotnet build -c Debug test/SlnMerge.Tests
       - run: dotnet test -c Debug --no-build test/SlnMerge.Tests
