--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -4,17 +4,20 @@ on:
   push:
     branches:
       - master
-    tags:
-      - "!*" # not a tag push
   pull_request:
     branches:
-      - "master"
+      - master
 
 jobs:
   build-dotnet:
-    if: "!(contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[ci skip]'))"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v2
-      - run: dotnet build -c Debug test/SlnMerge.Tests
-      - run: dotnet test -c Debug --no-build test/SlnMerge.Tests
+      - uses: actions/checkout@v3
+      - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
+        with:
+          dotnet-version: |
+            3.1.x
+            6.0.x
+      - run: dotnet build -c Debug
+      - run: dotnet test -c Debug --no-build
