fix: depends on

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -58,7 +58,7 @@ jobs:
 
   cleanup:
     if: needs.update-packagejson.outputs.is-branch-created == 'true'
-    needs: [update-packagejson, build-unity]
+    needs: [update-packagejson, build-dotnet]
     uses: Cysharp/Actions/.github/workflows/clean-packagejson-branch.yaml@main
     with:
       branch: ${{ needs.update-packagejson.outputs.branch-name }}
