--- a/test/SlnMerge.Tests/SlnMerge.Tests.csproj
+++ b/test/SlnMerge.Tests/SlnMerge.Tests.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
+    <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\src\Editor\SlnMerge.cs" Link="SlnMerge.cs" />
+    <Compile Include="..\..\src\Editor\**\*.cs" LinkBase="src" />
   </ItemGroup>
 
   <ItemGroup>
