--- a/src/SlnMerge.Core.csproj
+++ b/src/SlnMerge.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -14,5 +14,9 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="SlnMerge.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\external\vs-solutionpersistence-private\SlnMerge.Microsoft.VisualStudio.SolutionPersistence.csproj" />
   </ItemGroup>
 </Project>
