--- a/external/vs-solutionpersistence-private/SlnMerge.Microsoft.VisualStudio.SolutionPersistence.csproj
+++ b/external/vs-solutionpersistence-private/SlnMerge.Microsoft.VisualStudio.SolutionPersistence.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <RootNamespace>SlnMerge.Microsoft.VisualStudio.SolutionPersistence</RootNamespace>
+    <RootNamespace>Microsoft.VisualStudio.SolutionPersistence</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <DefineConstants>$(DefineConstants);NETFRAMEWORK</DefineConstants>
@@ -25,8 +25,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <WeaverFiles
-      Include="$(SolutionDir)artifacts\bin\SlnMerge.Weavers.Internalize\$(Configuration)\SlnMerge.Weavers.Internalize.dll" />
+    <WeaverFiles Include="$(SolutionDir)artifacts\bin\SlnMerge.Weavers.Internalize\$(Configuration)\SlnMerge.Weavers.Internalize.dll" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="..\vs-solutionpersistence\src\Microsoft.VisualStudio.SolutionPersistence\Errors.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>..\vs-solutionpersistence\src\Microsoft.VisualStudio.SolutionPersistence\Errors.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="..\vs-solutionpersistence\src\Microsoft.VisualStudio.SolutionPersistence\Errors.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Errors.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Microsoft.VisualStudio.SolutionPersistence</CustomToolNamespace>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
