--- a/.github/workflows/update-prebuilt.yaml
+++ b/.github/workflows/update-prebuilt.yaml
@@ -14,6 +14,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: Cysharp/Actions/.github/actions/checkout@main
+        with:
+          submodules: true
       - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
       - name: Run dotnet publish
         run: |
