--- a/.github/workflows/update-prebuilt.yaml
+++ b/.github/workflows/update-prebuilt.yaml
@@ -18,12 +18,13 @@ jobs:
           submodules: true
       - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
       - name: Run dotnet publish
-        run: |
-          dotnet publish
-          cp -f artifacts/publish/SlnMerge.Microsoft.VisualStudio.SolutionPersistence/release/SlnMerge.Microsoft.VisualStudio.SolutionPersistence.dll src/Editor/
+        run: dotnet publish
+      - name: Copy built DLL to src/Editor
+        run: cp -f artifacts/publish/SlnMerge.Microsoft.VisualStudio.SolutionPersistence/release/SlnMerge.Microsoft.VisualStudio.SolutionPersistence.dll src/Editor/
       - name: Commit and push
         run: |
+          git status -s
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -m "Update pre-built libraries" src/Editor/**/*.dll
+          git commit -m "Update pre-built libraries" src/Editor/*.dll
           git push origin ${{ github.ref_name }}
