--- a/.github/workflows/build-debug.yaml
+++ b/.github/workflows/build-debug.yaml
@@ -16,9 +16,8 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: Cysharp/Actions/.github/actions/checkout@main
-      - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
         with:
-          dotnet-version: |
-            6.0.x
-      - run: dotnet build -c Debug
-      - run: dotnet test -c Debug --no-build
+          submodules: true
+      - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
+      - run: dotnet build -c Release
+      - run: dotnet test -c Release --no-build
