Add a settings panel for Unity Editor

--- a/src/SlnMerge.Core.csproj
+++ b/src/SlnMerge.Core.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="**/Unity/*.*" />
     <None Remove="**/*.meta" />
     <None Remove="Editor\SlnMerge.Microsoft.VisualStudio.SolutionPersistence.dll" />
   </ItemGroup>
