--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -50,6 +50,7 @@ jobs:
       tag: ${{ inputs.tag }}
       nuget-push: false
       release-upload: false
+      release-format: "{0}"
     secrets: inherit
 
   cleanup:
